2001-11-30  Michael Meeks  <michael@ximian.com>

	* Version 1.107.0

2001-12-02  Seth Nickell  <snickell@stanford.edu>

	* bonobo/Makefile.am:
	* bonobo/bonobo-property-control.c:
	(bonobo_property_control_changed):

	Add bonobo-property-control back into the build,
	and fix one minor type error.
	
2001-11-26  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_get_remote_window): disable
	hack around GtkPlug / Socket bugs.

2001-11-26  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-main.c (bonobo_ui_main): impl.

	* bonobo/bonobo-socket.c (bonobo_socket_show_all):
	fix prototype.

2001-11-26  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-socket.[ch] (bonobo_socket_get_type): return a GType
	rather than guint

2001-11-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-socket.c
	(bonobo_socket_class_init): upd.
	(bonobo_socket_show_all): empty impl - don't propagate.

Tue Nov 20 21:17:03 2001  Owen Taylor  <otaylor@redhat.com>

	* bonobo/bonobo-control-frame.c (bonobo_control_frame_get_control_property):
	Finish renaming opt_ev argument in function body as well.

	* samples/compound-doc/container/{component.h, document.h}: Include glib-object.h
	instead of specific gobject/* header files. 

2001-11-20  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control-frame.[ch]:
	(bonobo_control_frame_get_control_property_bag): renamed
	exception param to 'opt_ev' to indicate that it's optional.

2001-11-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-plug.c (bonobo_plug_dispose): update
	to use bonobo_socket_disposed.

	* bonobo/bonobo-socket.c (bonobo_socket_disposed): impl.
	internal method to replace GTK_OBJECT_DESTROYED

2001-11-18  Peter Williams  <peterw@ximian.com>

	* bonobo/bonobo-ui-marshal-main.c: Same.

	* bonobo/bonobo-ui-xml.c: See below.

	* bonobo/bonobo-ui-engine.c: Include glib-object.h instead of gobject/gsignal.h
