@@ -1,3 +1,10 @@
+2001-12-03  Laszlo Peter  <laca@ireland.sun.com>
+
+	* bonobo/bonobo-plug.c:
+	* bonobo/bonobo-socket.c:
+
+	Fix some void functions returning values.
+
 2001-11-30  Michael Meeks  <michael@ximian.com>
 
 	* Version 1.107.0
